--- a/landing page css.css
+++ b/landing page css.css
@@ -43,7 +43,7 @@ nav a:hover {
 
 /* Hero Section */
 .hero {
-  background: url('IMG_20250613_143915.jpg') center/cover no-repeat;
+  background: url('pp.jpg') center/cover no-repeat;
   color: white;
   text-align: center;
   padding: 60px 20px;
